infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: order-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      serviceAccountName: order-sa # IMPORTANTE: Service Account para autenticação com AWS
      containers:
        - name: order-api
          image: 239409137076.dkr.ecr.us-east-1.amazonaws.com/order:12975c12d517bc327fc7e76d99c4a548b678843a
          #image: hmouraf/fastfood:tech_fase2
          #image: hmouraf/soat-tech-challenge-fast-food-app:feature-build
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "800Mi" # Mínimo de memória garantida
              cpu: "250m"      # Mínimo de CPU garantida (0.25 cores)
            limits:
              memory: "1G" # Máximo de memória que o container pode usar
              cpu: "512m"      # Máximo de CPU que o container pode usar (0.5 cores)
          livenessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 60

          readinessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 60
---
