infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order-app
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
