infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: order-app
  annotations:
    # Rewrite removido
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /orders
        pathType: Prefix
        backend:  
          service:
            name: order-service
            port:
              number: 8080
